Styles/custom-webix-spreadsheet.css
/* ... */
.custom-spreadsheet .webix_toolbar.webix_ssheet_toolbar .webix_button[aria-pressed="true"] {
    background-color: #ffc107 !important;
    border-color: #ffc107 !important;
    border-width: 2px;
    outline: none !important;
}

.custom-spreadsheet .webix_toolbar.webix_ssheet_toolbar input:active {
    border-color: #007bff !important;
}

.custom-spreadsheet .webix_control:not(.webix_ssheet_bold):not(.webix_ssheet_italic):not(.webix_ssheet_underline):not(.webix_ssheet_strike) input,
.custom-spreadsheet .webix_control:not(.webix_ssheet_bold):not(.webix_ssheet_italic):not(.webix_ssheet_underline):not(.webix_ssheet_strike) button,
.custom-spreadsheet .webix_control:not(.webix_ssheet_bold):not(.webix_ssheet_italic):not(.webix_ssheet_underline):not(.webix_ssheet_strike) textarea,
.custom-spreadsheet .webix_inp_label,
.custom-spreadsheet .webix_inp_top_label,
.custom-spreadsheet .webix_inp_bottom_label,
.custom-spreadsheet .webix_ssheet_subbar_title,
.custom-spreadsheet .webix_view.webix_control.webix_el_label .webix_el_box,
.custom-spreadsheet .ssheet_list_sheets .webix_list_item.ssheet_order_sheets {
    font-family: "Helvetica Neue", sans-serif !important;
}

.custom-spreadsheet .webix_cell {
    font-family: "Helvetica Neue", sans-serif
}

.custom-spreadsheet .webix_ssheet_toolbar_spacer {
    background-color: #D5D8DC !important;
}

.custom-spreadsheet .webix_toolbar,
.custom-spreadsheet .ssheet_list_sheets {
    background-color: #F4F7FB !important;
}

.custom-spreadsheet .webix_area_selection {
    background-color: #007bff !important;
}

.webix_view.webix_window.webix_ssheet_dialog .ssheet_cancel_button .webix_button,
.webix_modal_box.webix_confirm.webix_ssheet_confirm .webix_popup_button[aria-label="Cancel"] div {
    color: #dc3545 !important;
    background-color: transparent !important;
    border-color: #dc3545 !important;
    border-width: 1px !important;
    border-radius: .25rem !important;
    outline: none !important;
}

.webix_view.webix_window.webix_ssheet_dialog .ssheet_cancel_button .webix_button:hover,
.webix_view.webix_window.webix_ssheet_dialog .ssheet_cancel_button .webix_button:focus,
.webix_view.webix_window.webix_ssheet_dialog .ssheet_cancel_button .webix_button:active,
.webix_view.webix_window.webix_ssheet_dialog .ssheet_cancel_button .webix_button:hover,
.webix_view.webix_window.webix_ssheet_dialog .ssheet_cancel_button .webix_button:focus,
.webix_view.webix_window.webix_ssheet_dialog .ssheet_cancel_button .webix_button:active,
.webix_modal_box.webix_confirm.webix_ssheet_confirm .webix_popup_button[aria-label="Cancel"] div:hover,
.webix_modal_box.webix_confirm.webix_ssheet_confirm .webix_popup_button[aria-label="Cancel"] div:focus,
.webix_modal_box.webix_confirm.webix_ssheet_confirm .webix_popup_button[aria-label="Cancel"] div:active {
    color: white !important;
    background-color: #dc3545 !important;
    border-color: #dc3545 !important;
    border-width: 1px !important;
    border-radius: .25rem !important;
    outline: none !important;
}

.webix_view.webix_window.webix_ssheet_dialog .webix_view.webix_layout_line .webix_el_button:not(.ssheet_cancel_button) .webix_button,
.webix_modal_box.webix_confirm.webix_ssheet_confirm .webix_popup_button.confirm {
    color: #28a745 !important;
    background-color: transparent !important;
    border-color: #28a745 !important;
    border-width: 1px !important;
    border-radius: .25rem !important;
    outline: none !important;
}

.webix_view.webix_window.webix_ssheet_dialog .webix_view.webix_layout_line .webix_el_button:not(.ssheet_cancel_button) .webix_button:hover,
.webix_view.webix_window.webix_ssheet_dialog .webix_view.webix_layout_line .webix_el_button:not(.ssheet_cancel_button) .webix_button:focus,
.webix_view.webix_window.webix_ssheet_dialog .webix_view.webix_layout_line .webix_el_button:not(.ssheet_cancel_button) .webix_button:active,
.webix_modal_box.webix_confirm.webix_ssheet_confirm .webix_popup_button.confirm:hover,
.webix_modal_box.webix_confirm.webix_ssheet_confirm .webix_popup_button.confirm:hover:focus,
.webix_modal_box.webix_confirm.webix_ssheet_confirm .webix_popup_button.confirm:hover:active {
    color: white !important;
    background-color: #28a745 !important;
    border-color: #28a745 !important;
    border-width: 1px !important;
    border-radius: .25rem !important;
    outline: none !important;
}

.webix_popup_button,
.webix_popup_button.confirm {
    font-weight: 100 !important;
}

.webix_alert .webix_popup_title, .webix_confirm .webix_popup_title, .webix_prompt .webix_popup_title,
.webix_alert .webix_popup_text, .webix_confirm .webix_popup_text, .webix_prompt .webix_popup_text {
    box-shadow: inset 0 4px #007bff !important;
}

.custom-spreadsheet .close-button button {
    color: #dc3545 !important;
    background-color: transparent !important;
    border-color: #dc3545 !important;
    border-width: 1px !important;
    border-radius: .25rem !important;
    border-style: solid !important;
    box-shadow: none !important;
    outline: none !important;
    appearance: none !important;
}

.custom-spreadsheet .close-button button:hover,
.custom-spreadsheet .close-button button:focus,
.custom-spreadsheet .close-button button:active {
    color: white !important;
    background-color: #dc3545 !important;
    border-color: #dc3545 !important;
    border-width: 1px !important;
    border-radius: .25rem !important;
    border-style: solid !important;
    box-shadow: none !important;
    outline: none !important;
    appearance: none !important;
}

.custom-spreadsheet .save-button button {
    color: #28a745 !important;
    background-color: transparent !important;
    border-color: #28a745 !important;
    border-width: 1px !important;
    border-radius: .25rem !important;
    border-style: solid !important;
    box-shadow: none !important;
    outline: none !important;
    appearance: none !important;
}
/* ... */

